--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'Geist';
-    src: url('/fonts/Geist-Bold.otf') format('opentype');
+    src: url('./fonts/Geist-Bold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: 'Geist';
-    src: url('/fonts/Geist-SemiBold.otf') format('opentype');
+    src: url('./fonts/Geist-SemiBold.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -22,7 +22,7 @@
 
 @font-face {
     font-family: 'Geist';
-    src: url('/fonts/Geist-Medium.otf') format('opentype');
+    src: url('./fonts/Geist-Medium.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -30,7 +30,7 @@
 
 @font-face {
     font-family: 'Geist';
-    src: url('/fonts/Geist-Regular.otf') format('opentype');
+    src: url('./fonts/Geist-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -38,7 +38,7 @@
 
 @font-face {
     font-family: 'GeistMono';
-    src: url('/fonts/GeistMono-Regular.otf') format('opentype');
+    src: url('./fonts/GeistMono-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -46,7 +46,7 @@
 
 @font-face {
     font-family: 'Pixelify';
-    src: url('/fonts/PixelifySans-VariableFont_wght.ttf') format('truetype');
+    src: url('./fonts/PixelifySans-VariableFont_wght.ttf') format('truetype');
     font-display: swap;
 }
 
