--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,7 +22,7 @@
 
 @font-face {
     font-family: 'Geist';
-    src: url('/../fonts/Geist-Medium.otf') format('opentype');
+    src: url('./../fonts/Geist-Medium.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
